# react-native-quick-argon2

./: .gitmodules  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  react-native-quick-argon2.podspec  tsconfig.json
.changeset/: curly-planets-peel.md  wet-starfishes-act.md
.github/workflows/: build-android.yml  build-ios.yml  release.yml  validate-android.yml  validate-cpp.yml  validate-js.yml
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/quickargon2/: QuickArgon2Module.java  QuickArgon2Package.java
cpp/: RNA2Argon2.cpp  RNA2Argon2.h  RNA2QuickArgon2HostObject.cpp  RNA2QuickArgon2HostObject.h  example.cpp
cpp/JSIUtils/: RNA2DispatchQueue.cpp  RNA2DispatchQueue.h  RNA2JSIMacros.h  RNA2SmartHostObject.cpp  RNA2SmartHostObject.h  RNA2ThreadAwareHostObject.cpp  RNA2ThreadAwareHostObject.h  RNA2TypedArray.cpp  RNA2TypedArray.h
example/: App.tsx  app.json  babel.config.js  package-lock.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/quickargon2example/: ReactNativeFlipper.java
example/android/app/src/main/java/com/quickargon2example/: MainActivity.java  MainApplication.java
example/android/app/src/main/res/values/: strings.xml
example/android/app/src/release/java/com/quickargon2example/: ReactNativeFlipper.java
example/ios/: Podfile
example/ios/QuickArgon2Example/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/QuickArgon2Example.xcodeproj/: project.pbxproj
example/ios/QuickArgon2Example.xcodeproj/xcshareddata/xcschemes/: QuickArgon2Example.xcscheme
example/ios/QuickArgon2Example.xcworkspace/: contents.xcworkspacedata
example/ios/QuickArgon2ExampleTests/: QuickArgon2ExampleTests.m
example/src/testing/: TestList.ts
example/src/testing/Tests/Argon2Tests/: index.ts
ios/: QuickArgon2Module.h  QuickArgon2Module.mm
ios/QuickArgon2.xcodeproj/: project.pbxproj
src/: constants.ts  crypto.ts  index.ts  install.ts  type.ts  utils.ts
src/@types/: phc.d.ts
